force-app/main/default/objects/Player__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <description>This is the Date of births of all CSK players</description>
    <inlineHelpText>Enter your date of birth.</inlineHelpText>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>