force-app/main/default/objects/Player__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&apos;gmail.com&apos;</defaultValue>
    <description>This is the Email of CSK players.</description>
    <inlineHelpText>Enter your Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>