force-app/main/default/objects/Player__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>This are the phone numbers of CSK players.</description>
    <inlineHelpText>Enter your phone</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>