force-app/main/default/objects/Player__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>This are the roles for each players.</description>
    <inlineHelpText>Select your role.</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captain</fullName>
            </value>
            <value>
                <fullName>W/K</fullName>
            </value>
            <value>
                <fullName>Batsman</fullName>
            </value>
            <value>
                <fullName>Bowler</fullName>
            </value>
            <value>
                <fullName>All-Rounder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>